fixing darkmode color and custom scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,18 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
+::-webkit-scrollbar {
+    width: 15px;
+}
 
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
+::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255);
+}
 
-    /* Hide scrollbar for IE, Edge and Firefox */
-    .no-scrollbar {
-        -ms-overflow-style: none;
-        /* IE and Edge */
-        scrollbar-width: none;
-        /* Firefox */
-    }
+::-webkit-scrollbar-thumb {
+    background-color: #8e8e8e;
+}
+
+.dark ::-webkit-scrollbar-track {
+    background-color: rgb(26, 26, 26);
+}
+
+.dark ::-webkit-scrollbar-thumb {
+    background-color: #163c45;
 }
